--- a/docs/src/style.css
+++ b/docs/src/style.css
@@ -9,24 +9,38 @@ li {
   font-size: 1.2rem;
 }
 
-body {
+ body {
   font-family: 'Roboto', sans-serif;
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
   background-color: rgb(255, 255, 255);
   position: relative;
+  scroll-behavior: smooth; /* Enable smooth scrolling */
+}
+
+section {
+    height: 100vh; /* Make each section take up the full viewport height */
+    padding-top: 10rem; /* Adjust this value based on the height of your header */
+    box-sizing: border-box; /* Ensure padding is included in the height */
+    padding-bottom: 20rem;
 }
 
 header {
   display: flex;
-  justify-content: space-between;
+  width: 100%;
   align-items: center;
-  padding: 20px 10%;
   color: rgb(0, 0, 0);
   background-color: white; /* Ensure the header has a white background */
-  z-index: 0; /* Ensure the header is above the canvas */
-  position: relative;
+  justify-content: space-between;
+  z-index: 2; /* Ensure the header is above the canvas */
+  position: fixed;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin:0;
+  border-bottom: solid 1px rgb(0, 0, 0);
+}
+
+header ul{
+  margin-right: 20px;
 }
 
 .home {
@@ -94,16 +108,14 @@ canvas {
 /********** GOL button **********/
 
 .icon-button {
-  background: none;
-  border: none;
+  width: 2.3rem; /* Adjust this value to make the icons smaller */
+  height: 2.3rem; /* Adjust this value to make the icons smaller */
+  margin-right: 10px;
   cursor: pointer;
-  position: absolute;
-  top: 20px;
-  right: 20px;
-  z-index: 2; /* Ensure the button is above other elements */
+  background: none;
   background-color: white;
   padding: 10px;
-  padding-bottom: 0;
+  border: none;
 }
 
 .icon-button img {
@@ -224,6 +236,8 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 2rem;
+    padding-top: 10rem;
   }
   
   .projects h1 {
@@ -301,6 +315,31 @@ a {
   .project:hover .project-content {
     transform: translateY(80%);  /* Move the sine wave and content up */
   }
+
+  .contact{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1rem;
+    width: 100%;
+    padding-bottom: 5rem;
+  }
+
+  .about{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+
+  section {
+    height: 100vh; /* Make each section take up the full viewport height */
+    padding-top: 1rem; /* Adjust this value based on the height of your header */
+    box-sizing: border-box; /* Ensure padding is included in the height */
+    padding-bottom: 1rem;
+}
 }
 
 
@@ -312,13 +351,14 @@ a {
   align-items: center;
   margin-top: 2rem;
   width: 100%;
+  margin-bottom: 1rem;
 }
 
 .about-container{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 2rem;
+    margin-top: 0rem;
     width: 100%;
 }
 
@@ -335,7 +375,7 @@ a {
 
 .about-content h2 {
   display: flex;  
-  justify-content: left;
+  justify-content: center;
   padding: 0;
   margin-left: 0;
 }
@@ -384,8 +424,15 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 2rem;
+  margin-top: 25rem;
   width: 100%;
+}
+.contact-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 2rem;
+    width: 30%;
 }
 .contact h1 {
   display: flex;
@@ -405,7 +452,7 @@ a {
 .contact-form input,
 .contact-form textarea {
   width: 100%; /* Make inputs span full width */
-  max-width: 80%; /* Prevent excessive stretching */
+  max-width: 100%; /* Prevent excessive stretching */
   padding: 12px; /* Increase padding for better usability */
   font-size: 1rem; /* Make text inside inputs larger */
   margin-bottom: 1rem; /* Add spacing between fields */
@@ -433,7 +480,38 @@ a {
   box-shadow: 0 0 0 2px rgb(0, 0, 0);
 }
 
+footer {
+  padding: 20px 0;
+  text-align: center;
+  border-top: 1px solid #e7e7e7;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
 
+.footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.footer-content p {
+  margin: 0;
+}
+
+.hidden {
+  display: none;
+}
+
+#resume-viewer {
+  position: fixed;
+  top: 100px; /* Adjust based on your navbar height */
+  left: 0;
+  width: 100%;
+  height: calc(100vh - 60px); /* Fill the screen except the navbar */
+  background: white;
+  z-index: 100;
+}
 
 /********** Typing Animation **********/
 #typing {
